Added redirect to docs
